Add create notification endpoint (#2)
* Add dynamoDb Resource

* Add notification create method
